Fix: profiles layout issues - change buttons is user is viewing his profile - fix UI elements placement issues

--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -14,7 +14,6 @@
 .profileInfo {
   margin: 0 0 100px 50px;
   width: min-content;
-  font-size: 16px;
   gap: 90px;
 }
 
@@ -32,7 +31,12 @@
 }
 
 .proMiddle {
+  min-width: max-content;
   gap: 40px;
+}
+
+.proBottom {
+  width: 100%;
 }
 
 .posts {
